# cauculative-constitution

./: .gitignore  AGENT_GOVERNANCEV(future seed)4.0.md  AUDIT_TEST_SPEC_v0.1.md  CLAIMS_AND_LIMITATIONS.md  EVIDENCE_MATRIX.md  EXECUTIVE_SUMMARY.md  Futher Explaning of present score of AGENT_GOVERNANCE(future seed)4.0.md  LOG_SUPPORTED_CLAIMS_v0.1.md  MODIFICATION_LOG.md  NON_PUNITIVE_GOVERNANCE_NOTE_v0.1.md  PROPOSAL_DRAFT.md  README.md  REPRODUCIBILITY.md  R_LAYER_DESIGN_NOTE_v0.1.md  omega_constitutional_model.py  omega_web_ui.py  pyproject.toml
agent_governance/: AGENT_ETHICS_MANAGEMENT_SOURCE_MAP_v0.1.md  AGENT_GOVERNANCEV(future seed)4.0.md  AGENT_GOVERNANCE_OVERVIEW_v0.1.md  AGENT_GOV_BASELINE_COMPARISON_v0.1.md  AGENT_GOV_MINI_BM_v0.1.md  APPLICATION_NARRATIVE_SNIPPET_v0.1.md  CLEAR_STYLE_AGENT_EVAL_v0.1.md  COLLUSION_RESISTANCE_NOTE_v0.1.md  Futher Explaning of present score of AGENT_GOVERNANCE(future seed)4.0.md  MODIFICATION_LOG.md  README.md  SANDBOX_SCOPE.md  SOUL.md  SOUL_PROFILE_SPEC_v0.1.md  TRACE_SCHEMA_v0.1.md  __init__.py  anti_collusion.py  collusion_smoke_check.py  demo_agent_ethics_loop.py  event_log.py  mini_benchmark_cases.json  replay.py  run_baseline_comparison.py  run_bazaarlink_api_probe.py  run_clear_style_eval.py  run_mini_benchmark.py  schemas.py  scorers.py  six_axis_adapter.py  smoke_check.py  soul_profile.py  soul_smoke_check.py
application_narrative/: FINAL_APPLICATION_NARRATIVE_v0.1.md
artifacts/: FELLOWSHIP_COMPARATIVE_EVALUATION_v0.1.md
cyber_safety/: CYBER_SAFETY_TRACE_AUDIT_NOTE_v0.1.md
ethiccaculate/: __init__.py  audit.py  (+25 more)
(+55 files in other folders)
